--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=67.0"]
 build-backend = "setuptools.build_meta"
 [project]
 name = "grammateus"
-version = "0.0.5"
+version = "0.0.6"
 authors = [
     {name="Alexander Fedotov", email="alex.fedotov@aol.com"},
 ]
@@ -19,6 +19,7 @@ keywords = ["grammateus", "recording", "ai"]
 dependencies = [
     "requests >= 2.31.0",
     "pydantic >= 2.6.3",
+    "jsonlines >= 4.0.0",
 ]
 [project.optional-dependencies]
 openai = ["openai >= 1.13.3"]
