--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=67.0"]
 build-backend = "setuptools.build_meta"
 [project]
 name = "grammateus"
-version = "0.0.24"
+version = "0.1.0"
 authors = [
     {name="Alexander Fedotov", email="alex.fedotov@aol.com"},
 ]
@@ -17,9 +17,9 @@ classifiers=[
 ]
 keywords = ["grammateus", "recording", "ai"]
 dependencies = [
-    "requests >= 2.32.0",
+    "requests >= 2.32.3",
     "jsonlines >= 4.0.0",
-    "ruamel.yaml >= 0.18.6",
+    "PyYAML >= 6.0.2"
 ]
 [project.urls]
 "Homepage" = "https://github.com/multilogue/grammateus"
